@@ -2,5 +2,5 @@
 # Automatically generated by `hgimportsvn`
 syntax:glob
 .svn
-.pyc
+*.pyc
 *.egg-info
